# virt_knock

./: .gitignore  LICENSE  README.md  batch_tf_knockout.py  batch_tf_knockout_oligo.py  check_results.py  pyproject.toml  vknock_cuda.py
benchmark/: bench.py
examples/: batch_tf_knockout.py  check_results.py  vknock_cuda.py
virt_knock/: __init__.py  __main__.py  cli.py  core.py  enrichment.py
