[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virt_knock"
version = "0.2.0"
description = "CUDA-native single-cell virtual gene knockout (scTenifoldKnk)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "virchow-zhang", email = "1063493607@qq.com"},
]
keywords = [
    "single-cell", "scRNA-seq", "gene-regulatory-network",
    "virtual-knockout", "CUDA", "GPU", "PyTorch",
    "scTenifoldKnk", "bioinformatics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "torch>=2.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
enrich = [
    "gseapy>=1.0",
]
dev = [
    "pytest>=7",
    "gseapy>=1.0",
]

[project.scripts]
virt_knock = "virt_knock.cli:main"

[project.urls]
Homepage = "https://github.com/virchow-zhang/virt_knock"
Repository = "https://github.com/virchow-zhang/virt_knock"

[tool.setuptools.packages.find]
include = ["virt_knock*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
